[gd_scene load_steps=18 format=3 uid="uid://c07exrxi85bon"]

[ext_resource type="Script" path="res://game.gd" id="1_objr7"]
[ext_resource type="AudioStream" uid="uid://bwcw3jksjuu7a" path="res://sfx/alarm.ogg" id="2_tfaga"]
[ext_resource type="AudioStream" uid="uid://bqu7wctf81kdi" path="res://sfx/alarm2.ogg" id="3_2cnue"]
[ext_resource type="AudioStream" uid="uid://qps6qic6diwa" path="res://sfx/negative_sound.ogg" id="4_jx608"]
[ext_resource type="AudioStream" uid="uid://c6wtdpr8bm1ww" path="res://sfx/negative_sound2.ogg" id="5_66fhy"]
[ext_resource type="AudioStream" uid="uid://cw8o4hiyuyihs" path="res://sfx/chimes.ogg" id="6_scpb4"]
[ext_resource type="AudioStream" uid="uid://m3t5nacnhnvr" path="res://sfx/click_1.ogg" id="7_jcw0m"]
[ext_resource type="AudioStream" uid="uid://bjky8cfyes7uh" path="res://sfx/click_2.ogg" id="8_moa30"]
[ext_resource type="AudioStream" uid="uid://w42lcp3hrqwp" path="res://sfx/click_3.ogg" id="9_pj6a8"]
[ext_resource type="AudioStream" uid="uid://bmw5a0oadmikj" path="res://sfx/click_4.ogg" id="10_xlks0"]
[ext_resource type="AudioStream" uid="uid://rilcftpbymvk" path="res://sfx/Ding.ogg" id="11_q8oin"]
[ext_resource type="AudioStream" uid="uid://d0af8k5lmu5xl" path="res://sfx/ding_deep.ogg" id="12_onrcn"]
[ext_resource type="AudioStream" uid="uid://2g7t0jlwge4" path="res://sfx/dum.ogg" id="13_atg5d"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_odt3j"]
random_pitch = 1.1
streams_count = 12
stream_0/stream = ExtResource("2_tfaga")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_2cnue")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_scpb4")
stream_2/weight = 1.0
stream_3/stream = ExtResource("7_jcw0m")
stream_3/weight = 1.0
stream_4/stream = ExtResource("8_moa30")
stream_4/weight = 1.0
stream_5/stream = ExtResource("9_pj6a8")
stream_5/weight = 1.0
stream_6/stream = ExtResource("10_xlks0")
stream_6/weight = 1.0
stream_7/stream = ExtResource("11_q8oin")
stream_7/weight = 1.0
stream_8/stream = ExtResource("12_onrcn")
stream_8/weight = 1.0
stream_9/stream = ExtResource("13_atg5d")
stream_9/weight = 1.0
stream_10/stream = ExtResource("4_jx608")
stream_10/weight = 1.0
stream_11/stream = ExtResource("5_66fhy")
stream_11/weight = 1.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_eakt2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_c3v73"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b86mr"]
normal = Vector2(-1, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_objr7")
ball_lifetime = 15.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CurrentCounterLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Current and maximum number of Godots on the screen."
theme_override_font_sizes/normal_font_size = 24
text = "0"
fit_content = true
autowrap_mode = 0

[node name="ClickButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Click!"

[node name="TotalCounterLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Total clicks"
text = "0"
fit_content = true
autowrap_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_odt3j")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(637, 654)
shape = SubResource("WorldBoundaryShape2D_eakt2")

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(0, 300)
shape = SubResource("WorldBoundaryShape2D_c3v73")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1152, 300)
shape = SubResource("WorldBoundaryShape2D_b86mr")

[connection signal="pressed" from="VBoxContainer/ClickButton" to="AudioStreamPlayer" method="play"]
